# POCAssistant

./: .gitignore  .gitmodules  CMakeLists.txt  POC.sql  readme.md  run.cmd  run.sh
cfg/: config.json
doc/: opening-report.md  precaution.md
res/: res.qrc
res/json/test/: outline.json  quiz.json
res/sample-code/: sum.cpp
res/style/: Aqua.qss
src/: basepage.cpp  basepage.h  coursepage.cpp  main.cpp  programpage.cpp  programpage.h  questionpage.cpp  questionpage.h  widget.cpp  widget.h
src/base/: base.hpp  basepage.cpp  basepage.h  basesocket.cpp  basesocket.h  constant.h  global.hpp
src/modules/: clicklabel.cpp  clicklabel.h  clickoptions.cpp  clickoptions.h  collectbutton.cpp  collectbutton.h  quizcontroller.cpp  quizcontroller.h  quizmodel.cpp  quizmodel.h  quizview.cpp  quizview.h
src/pages/: coursepage.cpp  coursepage.h  demo.cpp  demo.h  loginpage.cpp  loginpage.h  mainpage.cpp  mainpage.h  managementpage.cpp  managementpage.h  programpage.cpp  programpage.h  questionpage.cpp  quizpage.cpp  quizpage.h  statementpage.cpp  statementpage.h  updatepage.cpp  updatepage.h
src/tools/: jsonFile.hpp  logger.hpp
ui/: coursepage.ui  demo.ui  loginpage.ui  mainpage.ui  managementpage.ui  programpage.ui  questionpage.ui  quizpage.ui  statementpage.ui  updatepage.ui  widget.ui
